Disable fixed background attachment on mobile

--- a/client/src/styles/backgrounds.css
+++ b/client/src/styles/backgrounds.css
@@ -22,4 +22,7 @@
     .links {
         background: #50c16f;
     }
+    .programs {
+        background-attachment: unset;
+    }
 }
